# WikiRAG

./: .gitignore  README.md  notes.txt  pyproject.toml
archive/: main.py
wikirag/: main.py  rag_pipeline_old.py
wikirag/agents/: router.py  runner.py  tools.py
wikirag/cli/: app.py  main.py  run_chat.py
wikirag/data/: albert_einstein.txt  millennium_falcon.txt
wikirag/rag_pipeline/: __init__.py  config.py  document_loader.py  qa_engine.py  vectorstore.py
wikirag/utils/: __init__.py  wikipedia_parser.py
